# polygon_coverage_ros2

./: README.md
polygon_coverage_benchmark/: CMakeLists.txt  package.xml
polygon_coverage_geometry/: CMakeLists.txt  package.xml
polygon_coverage_geometry/include/polygon_coverage_geometry/: cgal_definitions.h  test_comm.h
polygon_coverage_geometry/src/: bcd.cc  boolean.cc  cgal_comm.cc  decomposition.cc  offset.cc  sweep.cc  triangulation.cc  visibility_graph.cc  visibility_polygon.cc
polygon_coverage_msgs/: CMakeLists.txt  package.xml
polygon_coverage_msgs/include/polygon_coverage_msgs/: conversion.h  msg_from_xml_rpc.h  msg_from_xml_rpc_copy111.h
polygon_coverage_msgs/src/: conversion.cc  msg_from_xml_rpc.cc  msg_from_xml_rpc111 (copy).cc
polygon_coverage_planners/: CMakeLists.txt  package.xml
polygon_coverage_planners/include/polygon_coverage_planners/sensor_models/: frustum.h
polygon_coverage_planners/src/cost_functions/: path_cost_functions.cc
polygon_coverage_planners/src/graphs/: gtspp_product_graph.cc  sweep_plan_graph.cc
polygon_coverage_planners/src/planners/: polygon_stripmap_planner.cc  polygon_stripmap_planner_exact.cc  polygon_stripmap_planner_exact_preprocessed.cc
polygon_coverage_planners/test/: planners-test.cpp
polygon_coverage_ros2/: CMakeLists.txt  package.xml
polygon_coverage_ros2/cfg/: coverage_planner.yaml  coverage_planner2.yaml
polygon_coverage_ros2/cfg/polygons/: example_polygon_epfl_simple.yaml
polygon_coverage_ros2/cfg/rviz/: rviz.rviz
polygon_coverage_ros2/include/polygon_coverage_ros2/: coverage_planner.h  polygon_planner_base.h  ros_interface.h  shortest_path_planner.h
polygon_coverage_ros2/launch/: coverage_planner.launch  coverage_planner.launch.py
polygon_coverage_ros2/src/: coverage_planner.cc  coverage_planner_exact_node.cc  coverage_planner_exact_preprocessed_node.cc  coverage_planner_node.cc  polygon_planner_base.cc  ros_interface.cc  shortest_path_planner.cc  shortest_path_planner_node.cc
polygon_coverage_ros2/test/: sweep_test_node.cc
polygon_coverage_solvers/: CMakeLists.txt  package.xml
polygon_coverage_solvers/include/polygon_coverage_solvers/: boolean_lattice.h  graph_base.h
polygon_coverage_solvers/include/polygon_coverage_solvers/impl/: graph_base_impl.h
polygon_coverage_solvers/src/: boolean_lattice.cc  combinatorics.cc  gk_ma.cc
polygon_coverage_solvers/test/: combinatorics-test.cpp  gk_ma-test.cpp
rviz_polygon_tool/: CMakeLists.txt  package.xml  plugin_description.xml
rviz_polygon_tool/include/rviz_polygon_tool/: polygon_tool.h
rviz_polygon_tool/src/: polygon_tool.cc
test1/: CMakeLists.txt  package.xml
test1/include/test1/: test1.h
test1/launch/: test1_node.launch.py  test2_node.launch.py
test1/parameters/: example_polygon_epfl_simple.yaml  test1_node.yaml
test1/rviz/: default.rviz
test1/src/: test1.cc  test1_node.cc  test2_node.cc
