<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polygon_coverage_msgs</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yjbox@qq.com">sera</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>polygon_coverage_geometry</depend>
  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <include_directories>include</include_directories>
  </export>
</package>
