<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polygon_coverage_planners</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yjbox@qq.com">sera</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>cgal</depend>
  <depend>rmw</depend>
  <depend>rosidl_typesupport_interface</depend>
  <depend>rcl_interfaces</depend>
  <depend>polygon_coverage_solvers</depend>
  <depend>polygon_coverage_geometry</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <include_directories>include</include_directories>
  </export>
</package>
