<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>polygon_coverage_ros2</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yjbox@qq.com">sera</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rcl_interfaces</depend>
  <depend>cgal</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2_eigen</depend>
  <depend>builtin_interfaces</depend>
  <depend>polygon_coverage_msgs</depend>
  <depend>polygon_coverage_geometry</depend>
  <depend>polygon_coverage_planners</depend>
  <depend>polygon_coverage_solvers</depend>
  <depend>rviz_polygon_tool</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
