<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rviz_polygon_tool</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yjbox@qq.com">sera</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>polygon_coverage_msgs</depend>
  <depend>polygon_coverage_geometry</depend>
  <depend>geometry_msgs</depend>
  <depend>pluginlib</depend>
  <!-- <depend>sensor_msgs</depend> -->
  <depend>tf2_msgs</depend>
  <!-- <depend>class_loader</depend> -->
  <depend>builtin_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
